# nombrilo

./: .gitignore  Cargo.toml  README.md  create_call_graph.sh  rustfmt.toml
codegen/: README.md  unpack5.py
src/: anvil.rs  chunk_format.rs  distribution.rs  lib.rs  main.rs  nbt.rs  unpack.rs
src/de/: error.rs  mod.rs  read.rs
src/nbt/: borrowed.rs  mod.rs  owned.rs
src/ser/: error.rs  formatter.rs  map_key.rs  mod.rs  tag_type.rs
src/unpack/: mod.rs  nosimd.rs  tests.rs  unpack_amd64.rs  unpack_portable.rs
